--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,6 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Luckiest Guy', cursive;
+    overflow-x: hidden;
 }
